Fix UI color contrast

--- a/src/components/ContentArea/ContentArea.module.css
+++ b/src/components/ContentArea/ContentArea.module.css
@@ -1,6 +1,6 @@
 .contentArea {
     display: inline-flex;
-    background-color: #0A0A0A;
+    background-color: #161616;
     border-radius: 2.5rem;
     height: 40rem;
     width: 100%;
