--- a/src/components/Playlist/Playlist.module.css
+++ b/src/components/Playlist/Playlist.module.css
@@ -6,7 +6,7 @@
 }
 
 .playlistName {
-    background-color: #121212;
+    background-color: #0A0A0A;
     border-radius: 1.5rem;
     display: inline-flex;
     align-items: center;
