--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0 15rem;
-  background-color: #121212;
+  background-color: #0A0A0A;
   color: white;
 }
 
